--- a/theme-switcher.desktop
+++ b/theme-switcher.desktop
@@ -2,7 +2,7 @@
 Name=Theme switcher
 Comment=Switch dark/light GTK theme automatically during day/night
 Exec=theme-switcher-manual
-Icon=light-dark-icon.png
+Icon=/usr/share/icons/hicolor/512x512/light-dark-icon.png
 Terminal=false
 Type=Application
 Categories=Settings
