--- a/theme-switcher.desktop
+++ b/theme-switcher.desktop
@@ -5,4 +5,4 @@ Exec=theme-switcher-manual
 Icon=/usr/share/icons/hicolor/512x512/light-dark-icon.png
 Terminal=false
 Type=Application
-Categories=Settings
+Categories=Utility
